# x-deeplearning

./: .gitmodules  README.md
blaze/: CMakeLists.txt  LICENSE  README.md
blaze/binding/: README.md
blaze/binding/python/: README.md  install.sh  setup.py
blaze/binding/python/pyblaze/: base.py  converter.py  libinfo.py  optimizer.py  predictor.py  qed.py
blaze/blaze/: CMakeLists.txt  libinfo.map
blaze/blaze/api/: README.md
blaze/blaze/api/c_api/: c_api_blaze_converter.cc  c_api_blaze_converter.h  c_api_blaze_optimizer.cc  c_api_blaze_optimizer.h  c_api_error.cc  c_api_error.h  c_api_predictor.cc  c_api_predictor.h  c_api_qed.cc  c_api_qed.h
blaze/blaze/api/cpp_api/: predictor.cc  predictor.h  predictor_impl.cc  predictor_impl.h  predictor_manager_impl.cc  predictor_manager_impl.h
blaze/blaze/batching/: basic_batch_scheduler.h  batch_scheduler.h  batch_scheduler_retrier.h  env.h  mutex.h  notification.h  periodic_function.cc  periodic_function.h  shared_batch_scheduler.h
blaze/blaze/common/: allocator.h  any.h  blob.cc  blob.h  common_defines.h  context.cc  context.h  cpu_event.cc  cpu_event.h  cuda_event.cc  cuda_event.h  cuda_helpers.cc  cuda_helpers.h  event.cc  event.h  exception.cc  exception.h  func.h  json.h  log.cc  log.h  murmurhash.h  observer.h  proto_configure.cc  proto_configure.h  proto_helper.cc  proto_helper.h  queue.h  registry.h  semaphore.h  stream.h  string_util.h  thread_local.h  thread_pool.h  timer.cc  timer.h  typeid.cc  typeid.h  types.cc  types.h
blaze/blaze/graph/: dag_net.cc  dag_net.h  fusion_pattern.cc  fusion_pattern.h  graph.cc  graph.h  hybrid_net.cc  hybrid_net.h  net.cc  net.h  simple_net.cc  simple_net.h  workspace.cc  workspace.h
blaze/blaze/math/: activation.h  binary_search.cc  binary_search.h  broadcast.cc  broadcast.cu  broadcast.h  cudnn_utils.cc  cudnn_utils.h  float16.cc  float16.h  gemm.cc  gemm.cu  gemm.h  memory.cc  memory.cu  memory.h  reduce.cc  reduce.cu  reduce.h  vml.cc  vml.cu  vml.h
blaze/blaze/model_importer/: graph_def.proto  model_importer.cc  model_importer.h  mxnet_importer.cc  mxnet_importer.h  onnx_importer.cc  onnx_importer.h  tensorflow_importer.cc  tensorflow_importer.h  ulf.md  ulf.proto  ulf_importer.cc  ulf_importer.h  xdl_importer.cc  xdl_importer.h  xdl_ulf_importer.cc  xdl_ulf_importer.h
blaze/blaze/operator/: common_helper.cc  common_helper.h  operator.cc  operator.h  operator_schema.cc  operator_schema.h
blaze/blaze/optimizer/: README.md  optimizer.cc  optimizer.h  pass.h
blaze/blaze/proto/: README.md  blaze.proto  embedding.proto  fusion_pattern.proto
blaze/blaze/scheduler/: batching.cc  batching.h  flattened_batching.cc  flattened_batching.h  scheduler.h  scheduler_manager.h  simple_scheduler.h  structured_batching.cc  structured_batching.h
blaze/blaze/store/: defines.h  mock_sparse_puller.cc  mock_sparse_puller.h  sparse_puller.cc  sparse_puller.h  store.cc  store.h
blaze/blaze/test/: CMakeLists.txt
blaze/cmake/: Cuda.cmake  ProtoBuf.cmake  Utils.cmake
blaze/example/: CMakeLists.txt  README.md  README_en.md
blaze/example/cpp/: CMakeLists.txt  predictor_example.cc
blaze/example/python/: predictor_example.py
blaze/example/tdm_data/: model_blaze_optimized
blaze/serving/: CMakeLists.txt  README.md  README_en.md  client.py  config
blaze/serving/frame/: main.cc  predict.proto  process.cc  process.h  thread_local.h
blaze/serving/model/: model.cc  model.h  model_manager.cc  model_manager.h
blaze/tools/: CMakeLists.txt  README.md  build_qed.py  gpu_status.cc  model_converter.py  model_optimizer.py
blaze/tools/drawer/: blaze_drawer.py  net2svg
blaze/tools/example_model/: README.md  build_all_model.sh
xdl/: CMakeLists.txt
xdl-algorithm-solution/ESMM/data/: CMakeLists.txt  README.md
xdl-algorithm-solution/TDM/src/: CMakeLists.txt  FindPythonAnaconda.cmake
xdl-algorithm-solution/TDMServing/: Build.sh  CMakeLists.txt  LICENSE
xdl-algorithm-solution/TDMServing/benchmark/: CMakeLists.txt  tdm_benchmark.cpp
xdl-algorithm-solution/TDMServing/cmake/: CompileProto.cmake  Utils.cmake
xdl-algorithm-solution/TDMServing/evaluation/: CMakeLists.txt  tdm_evaluation.cpp
xdl-algorithm-solution/TDMServing/examples/: CMakeLists.txt  tdm_example.cpp  tdm_with_filter_example.cpp
xdl-algorithm-solution/TDMServing/tdm-serving/: CMakeLists.txt
xdl-algorithm-solution/TDMServing/test/: CMakeLists.txt
xdl/cmake/: Cuda.cmake  Dependencies.cmake  FindNumPy.cmake  ProtoBuf.cmake  Utils.cmake
xdl/distributed/: install_xdl_submit.sh
xdl/distributed/xdl_submit/: xdl_submit.py
xdl/distributed/xdl_yarn_scheduler/: .gitignore  assembly.xml  pom.xml
xdl/distributed/yarn_patch/: gpu_ids.patch
xdl/docker/: Dockerfile  Dockerfile_for_gpu
xdl/docs/: cluster_deploy.md  contributing.md  user_guide.md
xdl/docs/tutorial/: xdljob.md
xdl/examples/deepctr/: deepctr.py
xdl/examples/estimator/: estimator_mxnet_test.py  estimator_tf_test.py
xdl/examples/mnist/: config.json  mnist.py
xdl/ps-plus/: .gitignore  CMakeLists.txt  README.md
xdl/test/: CMakeLists.txt
xdl/test/core/: CMakeLists.txt
xdl/test/data_io/: CMakeLists.txt  batch_test.cc  data_io_hdfs_test.cc  data_io_kafaka_test.cc  data_io_state_test.cc  data_io_test.cc  global_scheduler_test.cc  pause_test.cc  scheduler_test.cc  schema_test.cc  sg_mocker.h  sgroup_test.cc
xdl/test/python/: run_all.sh
xdl/test/util/: hdfs_define.h  hdfs_launcher.cpp  hdfs_launcher.h  test_utils.h  zookeeper_define.h  zookeeper_launcher.cpp  zookeeper_launcher.h
xdl/xdl/: CMakeLists.txt
xdl/xdl/core/: CMakeLists.txt
xdl/xdl/data_io/: CMakeLists.txt  batch.cc  batch.h  check_finish_op.cc  constant.h  data_io.cc  data_io.h  get_batch_op.cc  global_scheduler.cc  global_scheduler.h  pool.h  release_batch_op.cc  scheduler.cc  scheduler.h  schema.cc  schema.h  set_prop_op.cc  sgroup.cc  sgroup.h
xdl/xdl/proto/: builder.py  decode_v4.py  feaconf.proto  io_state.proto  sample.proto  sample_v4.proto  trace.proto
xdl/xdl/python/: CMakeLists.txt  __init__.py  __setup__.py  init.py  init_local.py  libinfo.py  preload.py
(+1801 files in other folders)
